# tempnetic

./: README.md  pyproject.toml  setup.py
cfg/: data.yaml  model.yaml  trainer.yaml
cfg/models/: mobilenet.yaml  panns.yaml
scripts/: eval.py  explore.py  main.py  run.py  stretch.py
tempnetic/: callbacks.py  data.py  system.py
tempnetic/models/: mobilenet.py  panns.py
tests/: test_dataset.py
